working on activity triangles

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -211,21 +211,20 @@ https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/
 
 <!-- REWRITE THE BELOW - CHANGE FOCUS TO TOOLS /RESOURCES -->
 
-Activity Theory allows researchers to identify intersecting or nested systems of activity with varied goals. Taking a holistic view of goals of the game making activity, we can identify the larger and smaller scale objectives of systems of varied scale.
+Activity Theory allows researchers to identify intersecting or nested systems of activity with varied goals. These descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity [Engestrom][Cole].
 
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
-
 A short description of the activity systems follows using the to the vignette above to anchour the process.
 
-CHECK BACK TO METHODOLOGY TO EXPLAIN THIS NESTED APPROACH
-These descriptions mirror the work of AT researchers who conceptualise scope of activity as concentric circles from Broffennbrenner with "larger" scopes of cultural and societal goals and smaller, narrower, lower scopes of more personal activity.
-As previously explored this mirrors the Activity, Action and Operation hierarchy. 
+There are several wider objectives of activity which may vary  including; parents facilitating coding and design learning for children, the children's motivations of being part of a fun club-like programme, and my own motivation of conducting research.
 
-On a wider scale, the overarching objectives of learning via engaging with the programme (parents), being part of a fun club (children) and conducting research (researcher), the system scopes include:
+More shared objectives exist within these wider aims and include: a larger-scoped objective of the group creating games which is fun to share and play, intermediate goals of identifying and implementing key game features to add to individual games; and narrow objectives involving creating or altering game assets and code constructs.
 
-- Larger-scoped objective: creating a game which is fun to play and communicate an environmental theme
-- Mid-level objectives: identifying and implementing key game features to add to the game
-- Narrow objectives: creating, changing and transporting game assets or changing code constructs to enact or change game elements
+<!-- As previously explored this mirrors the Activity, Action and Operation hierarchy. -->
+
+NOTE - The purpose of this following description is to situate the reader in full spectrum of activities before further analysis and to give an overview of the different activity system elements in situ before exploring tensions arising between them.
+
+
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
 |------|-------------|------------|
@@ -238,10 +237,23 @@ On a wider scale, the overarching objectives of learning via engaging with the p
 
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
-<br />
-<br />
 
-In this larger scoped activity system the direct objective of the activity is to make a game which is fun for the intended audience to play and which explores an environmental theme. While this is the chief objectives other high level objectives are present but much less dominant in this setting. Other objectives include: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills. While the primary audience for the created games are peers via ongoing informal testing, the theoretical end users are students and staff in the Manchester Met Brooks building where their games will be shared in arcade cabinets.
+**Wider Objective - Making games for an audience**
+
+NOTE - While the below are nested - some higher ones may be competing
+
+In this larger scoped activity system the direct objective of the activity is to make games which are fun for the intended audience to play and which explores an environmental theme.
+
+NOTE - WHY MENTION / REVEVANT?
+As previously indicated, other high level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills.
+
+
+Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
+
+
+In exploring the community of the activity system.
+
+While the primary audience for the created games are peers via ongoing informal testing, the theoretical end users are students and staff in the Manchester Met Brooks building where their games will be shared in arcade cabinets.
 
 INCLUDE PICTURE OF CABINET BEING PLAYED? - perhaps with branding
 
@@ -264,8 +276,7 @@ Toby then browses the web page of a menu of game design patterns and selects mov
 
 Other participants were less proficient using this online resources and used printed out versions of documentation.
 
-<br />
-<br />
+
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**         
 |----------------|-----------|------------|
