Game design pattern - description of vignette using AT systems

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -263,19 +263,38 @@ Toby begins the game making session playing his own game which he has developed 
 
 Analysis TO COME.
 
+**Intermediate Objective - Implementing a game element**
+
+<!-- | Subject         | Objective             | Tools & Processes          |
+|------|-------------|------------|
+| Groups or individual participants | Implementing game elements   | Code editing tool (glitch)   |
+|   |   |  Game preview tool (glitch) |
+|   |   |  Menu of game patterns at ggc-examples.glitch.me  |
+|   |   |  Step by step tutorials on FLOSS manuals  |
+|   |   |  Playtesting own game |
+|        |     |
+
+Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
+
+INSERT DIAGRAM
+
+
+
+
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
-In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game.
-<!-- NOTE - THIS IS MISSING FROM THE VIGNETTE -->
+The process of making a game was driven from early stages by learners requests to implement game features which followed freely with little prompting.
 
-MOVE TO PHASE ?
-On this page participant can pick missions from a choice of printed resources. There were four colour themed categories of missions. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements. Finally _System and Challenge_ patterns look at how different elements interact to create challenge in the game.
+By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
+
+NOTE - WHEN TO START USING GAME DESING PATTERNS AS TERMINOLOGY - AND HOW TO INTRODUCE
+
+In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of printed resources. There were four colour themed categories of missions. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements. Finally _System and Challenge_ patterns look at how different elements interact to create challenge in the game.
 
 Toby then browses the web page of a menu of game design patterns and selects moving enemies. At this scope of activity the goal is to increase the challenge and variety of the game experience. It appears probable that his is also guided by the expectations embodies in the page itself. EXPLAIN affordances OF DESIGN HERE.
 
 Other participants were less proficient using this online resources and used printed out versions of documentation.
-
 
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**         
@@ -289,11 +308,17 @@ Other participants were less proficient using this online resources and used pri
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-<br />
-Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples
-In some of the more complicated game elements there were many different stages in implementing each game design pattern. For example, some patterns involve creating a new graphical element in a separate online editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground before making code changes in several parts of the code.
+**Narrow Objective - Implementing discrete code and desing structures**
 
-Using the terminology of Activity Theory, each one of these stages can be viewed as a separate operation in the process of completing an action. Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
+NOTE - WHEN TO START USING GAME DESING PATTERNS AS TERMINOLOGY - AND HOW TO INTRODUCE
+
+While some game patterns were simple to add to to alter, other more complicated features involved several stages in implementation. For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element.
+
+NOTE - YES - BUT ALSO A DIFFERENT ACTIVITY SYSTEM - FIND LITERATURE TO EXPLAIN THIS.
+
+Using the terminology of Activity Theory, each one of these stages can be viewed as a separate operation in the process of completing an action.
+
+Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
 
 In this example he is competent in the process of comparing the own code to the code example to work out what code is new and relevant to the desired behaviour. He does not check the step by step tutorials which would provide more extensive, step-by-step help.   
 
