--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,6 +8,9 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
+
+
+
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
@@ -15,6 +18,12 @@ title: 4. Emerging Learning Designs
     -   [Commentary on Vignette - including a brief description of the
         nested levels of activity & tools
         used](#commentary-on-vignette---including-a-brief-description-of-the-nested-levels-of-activity-tools-used)
+        -   [Diverse Environmental
+            Objectives](#diverse-environmental-objectives)
+        -   [Wider Objective - Making games for an
+            audience](#wider-objective---making-games-for-an-audience)
+        -   [Intermediate Objective - Implementing a game
+            element](#intermediate-objective---implementing-a-game-element)
     -   [Commentary the use of AT scopes in data
         ANALYSIS](#commentary-the-use-of-at-scopes-in-data-analysis)
         -   [Levels of Abstraction om this design (perhaps
@@ -72,13 +81,13 @@ title: 4. Emerging Learning Designs
         REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
 -   [Link to next chapter](#link-to-next-chapter)
 
+
 ## Research Questions - June 2023
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to game coding and design?
 <!-- - What pedagogical factors are significant to support novices learning coding, particularly in game making contexts? -->
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
-
 
 ## Chapter Introduction  
 
@@ -216,7 +225,12 @@ Activity Theory allows researchers to identify intersecting or nested systems of
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
 A short description of the activity systems follows using the to the vignette above to anchour the process.
 
+#### Diverse Environmental Objectives
+
+
 There are several wider objectives of activity which may vary  including; parents facilitating coding and design learning for children, the children's motivations of being part of a fun club-like programme, and my own motivation of conducting research.
+
+![At Dia Environmental ](./Pictures/At_dia_3_v1.png){width=95%}
 
 More shared objectives exist within these wider aims and include: a larger-scoped objective of the group creating games which is fun to share and play, intermediate goals of identifying and implementing key game features to add to individual games; and narrow objectives involving creating or altering game assets and code constructs.
 
@@ -238,7 +252,7 @@ NOTE - The purpose of this following description is to situate the reader in ful
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
-**Wider Objective - Making games for an audience**
+#### Wider Objective - Making games for an audience
 
 NOTE - While the below are nested - some higher ones may be competing
 
@@ -247,9 +261,10 @@ In this larger scoped activity system the direct objective of the activity is to
 NOTE - WHY MENTION / REVEVANT?
 As previously indicated, other high level objectives exist including: research goals on the part of the researcher/ participant; desire to create a useful learning experience on the part of student helpers; learning computing skills and concepts as a home education project; and participating with other home educators in a creative environment and thus building team and communication skills.
 
-
 Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
 
+
+![At Dia 1](./Pictures/At_dia_1_v1.png){width=95%}
 
 In exploring the community of the activity system.
 
@@ -263,7 +278,7 @@ Toby begins the game making session playing his own game which he has developed 
 
 Analysis TO COME.
 
-**Intermediate Objective - Implementing a game element**
+#### Intermediate Objective - Implementing a game element
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -276,11 +291,7 @@ Analysis TO COME.
 
 Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
 
-INSERT DIAGRAM
-
-
-
-
+![At Dia 2](./Pictures/At_dia_2_v1.png){width=95%}
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
@@ -288,7 +299,6 @@ The process of making a game was driven from early stages by learners requests t
 
 By this stage, the process of collecting a user generated list of features and trying to respond to all of them as a facilitator had been abandoned as unrealistic. Instead a collection or menu of elements for the chosen game type of a platformer was in place. From now now these elements are named game design patterns from professional and amateur game coding terminology.
 
-NOTE - WHEN TO START USING GAME DESING PATTERNS AS TERMINOLOGY - AND HOW TO INTRODUCE
 
 In the example above Toby progresses from playtesting his own game to altering it by adding a new platform to the game. Toby retests immediately by clicking on the preview element of the game. On this page participant can pick missions from a choice of printed resources. There were four colour themed categories of missions. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements. Finally _System and Challenge_ patterns look at how different elements interact to create challenge in the game.
 
@@ -296,6 +306,13 @@ Toby then browses the web page of a menu of game design patterns and selects mov
 
 Other participants were less proficient using this online resources and used printed out versions of documentation.
 
+**Scope of activity:** While other interpretations are possible which view the implementation of each pattern as a form of action with each activity system, I have chosen to privilege this as a sub-activity system. The justification for this mirrors choices by other researchers who see the utility in a more granular exploration of the processes at work in a complex process.
+
+<!-- Explore the dividing line  -->
+
+As explored in the previous chapter, Barab and colleagues
+
+In the next section narrower actions within this
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**         
 |----------------|-----------|------------|
@@ -308,15 +325,10 @@ Other participants were less proficient using this online resources and used pri
 
 <!-- Table 4.x.  Tools used in lower-level objectives of implementing specific code structures or stages in creating game assets -->
 
-**Narrow Objective - Implementing discrete code and desing structures**
-
-NOTE - WHEN TO START USING GAME DESING PATTERNS AS TERMINOLOGY - AND HOW TO INTRODUCE
+**Narrower Actions - Implementing discrete code and design structures**
 
 While some game patterns were simple to add to to alter, other more complicated features involved several stages in implementation. For example, creating a new graphical element in a separate online pixel-art editor called Piskel, exporting and downloading it to the laptop, and uploading it to the glitch code playground and then making code changes in several parts of the code to initialise and implement new behaviour for this element.
 
-NOTE - YES - BUT ALSO A DIFFERENT ACTIVITY SYSTEM - FIND LITERATURE TO EXPLAIN THIS.
-
-Using the terminology of Activity Theory, each one of these stages can be viewed as a separate operation in the process of completing an action.
 
 Some of these operations are performed by Toby quickly and fluently by Toby indicating that he has performed them many times. One example is the quick navigation between the different tools. However some are new to Toby and are performed more hesitantly. For example, Toby is careful in his checking of the process of copying and pasting new code to his game code.
 
