--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -144,12 +144,6 @@ The work of Sannino on the use of secondary stimulation in formative interventio
 In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
 
 
-
-
-
-
-
-
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
 
@@ -238,8 +232,6 @@ More shared objectives exist within these wider aims and include: a larger-scope
 
 NOTE - The purpose of this following description is to situate the reader in full spectrum of activities before further analysis and to give an overview of the different activity system elements in situ before exploring tensions arising between them.
 
-
-
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**          |
 |------|-------------|------------|
 | Community of novice game makers | Creating a game which is fun to play and communicates an environmental theme     | Shared log in to code playground (glitch.com)   |
@@ -254,8 +246,6 @@ Table 4.x.  Tools used in larger-scoped objective involving the wider community 
 
 #### Wider Objective - Making games for an audience
 
-NOTE - While the below are nested - some higher ones may be competing
-
 In this larger scoped activity system the direct objective of the activity is to make games which are fun for the intended audience to play and which explores an environmental theme.
 
 NOTE - WHY MENTION / REVEVANT?
@@ -263,14 +253,14 @@ As previously indicated, other high level objectives exist including: research g
 
 Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
 
-
 ![At Dia 1](./Pictures/At_dia_1_v1.png){width=95%}
+
 
 In exploring the community of the activity system.
 
 While the primary audience for the created games are peers via ongoing informal testing, the theoretical end users are students and staff in the Manchester Met Brooks building where their games will be shared in arcade cabinets.
 
-INCLUDE PICTURE OF CABINET BEING PLAYED? - perhaps with branding
+![Carrot Eater](./Pictures/carroteater2.jpg){width=95%}
 
 In the vignette of Toby's activity this wider objective is present in the facilitator orientation at the start which references this audience -  _the Monday after we can play our games and we can share them with students. We can make the students frustrated when they can’t beat our games_. At the end of the vignette text, one of the student helpers also imagines this audience playing the game of Toby.   
 
