Check duplication with design and methodology chapters

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -338,8 +338,11 @@ Others in the group did not experiment in this way and used more direct help or 
 
 ### Commentary the use of AT scopes in data ANALYSIS
 
-
 #### Levels of Abstraction om this design (perhaps drop?)
+
+COMPARE TO THE PREVIOUS CHAPTER AND COMPRESS THIS
+MOVE ASMAP TOO PREVIOUS
+
 **moved from previous chapter_**
 The game making process can be viewed as nested activity
 
@@ -359,6 +362,7 @@ From the perspective of participants, the goal of implementing individual game p
 - any other value for practitioners, parents and young participants - i.e. in navigation and goal setting.
 
 **moved from previous chapter_**
+
 The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
 
 - There is a practicality in terms of defining possible boundaries of what to analyse in depth.
