some on structure

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -642,15 +642,15 @@ Lack user oriented data. Projected experience / intuitive.
 And drawn from motivations / objectives of researcher.
 
 
-####  FACILITATOR - Authenticity of coding environment  
+#### Tensions surrounding authenticity of coding environment  
 
- Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
+Javascript as coding language, Phaser as a game making framework and Glitch as a code environment, are highly authentic and used by both professional coders and enthusiasts alike.
 
- Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
+Javascript is an authentic language, core to modern web pages and applications. Phaser is a professional and enthusiast framework. Glitch is a code playground which while used for learning and which was chosen by Mozilla as a replacement tool for the education focused Thimble, is also used by professionals. In the early selection of tools the use of a framework based on javascript and web technology is driven by authenticity and thus an ability . My work on teach the web for Mozilla was motivated in part in the extensibility of this choice of language which can be compared to block based environments or game specific making tools like game-star mechanics.
 
   FIND SUPPORT FROM MOZILLA WHITE PAPER - JUSTIFY EFFORT OF JS AS A STARTING LANGUAGE
 
-  Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
+Phaser is a javascript framework embedded in html page. Unlike many game making tools this tools set can be extended to other kinds of projects and is a professional and foundational toolset used to build the majority of websites and many phone applications.
 
 
   <!-- An unusual approach so why?
@@ -661,11 +661,19 @@ And drawn from motivations / objectives of researcher.
   other unexpected Benefits
 
   - could bring in other web creation resource, piskel, -->
-#### Facilitator / Participant - Projected Barrier / (tension) - Authenticity of Audience
+#### Tensions associated with authenticity of audience
 
 **Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience**.
 
 Play Testing - each lesson can help with short term motivation of having a game product ready  for others to play.  Showcase events help longer-term motivation towards and aid prioritisation as learners near the end of their project.
+
+The process of starting with a broken but playable template game allowed learners to be able to share their game with others from the start of the coding process.
+
+As a designer I identified this tactic as a way to address learner disengagement if game coding is taught from scratch via a step by step instructions from first principles, especially in younger ages.
+
+This process aligns with the Use Modify Create pedagogy.
+
+Similarly, in my journal notes, I reflect on the difficulty of interrupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
 
 **Restricted vs extended community - e.g. why not scratch with online community?**
 
@@ -676,24 +684,18 @@ Time consideration of the process of being involved in an online community may r
 
 Also - the diversity of creations available on a online commmunity  could remove the more communal experience of the designed limitations.
 
-#### Drop? Not important enough for agency
-
-holding zone
 
 ### Participant conflicts / contractions
 
-Main ones
+Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress. The first involves clashes of identity and ambition and the second frustrations due to technical processes.
+I
 
  1. Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),
+
  2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing
 
-#### Not sure
 
-**Learner disengagement if game coding is taught in an instructionist / from first principles (especially in younger ages)**
-In my journal notes, I reflect on the difficulty of interupting the flow of making activities once they are underway. I thus began avoiding stopping making to share points to the whole class and avoid demonstrating key concepts on the screen.
-
-
-#### One - Identity hardcore coding & disfunctional group work - P1
+#### 1. Identity hardcore coding & disfunctional group work - P1
 
 **Learner anxiety if hardcore coding environment and peer working dynamics**
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
@@ -707,7 +709,7 @@ I was struck that his incident happened during a session where I had not played 
 -   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
 
 
-#### One - Two transition - freeing up collaboration patterns
+##### Transition - freeing up collaboration patterns
 
 **Encouraging peer learning vs social restrictions (One and two )**
 
@@ -725,7 +727,7 @@ https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/
 
 
 
-#### TWO - Participant experience of Contradiction - Conflict - not enough support available
+#### 2. Participant experience of Contradiction - Conflict - not enough support available
 
 **Conflict / Barrier - Learners difficulties  writing valid code**
 
@@ -747,8 +749,7 @@ As such I adapted a game template used in a Phaser tutorial. Thus the design sta
 In order to accelerate the process of making a game to fit into contextual expectations of an acceptable project timeframe, I pre-chose the genre of game to be made and based on my previous teaching experience, analysis of literature and knowledge of platform games, I pre-prepared a set of coded example and tutorials to implement a range of game design patterns.
 
 
-
-**Two - Documentation / Support Tensions**
+**Documentation / Support Tensions**
  <!-- NOTE -
  The language used, affordances, 2nd stimulation, practices, needs clarification.
   -->
@@ -791,7 +792,7 @@ Most forms of future documentation and support were originated at this stage. Th
  In my journal I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles.
  Narratively the equivalent of a prequel.   
 
-#### Tensions and related to navigation of various documentations sources
+##### Tensions and related to navigation of various documentations sources
 
 The previous stage had created a variety of supporting documents and processes. In phase two I struggled to communicate these options consistently and effectively to students.
 
