--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -9,14 +9,19 @@ categories: chapter
 title: 4. Emerging Learning Designs
 ---
 
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Short vignette illustrating shifts in scope of
     activity](#short-vignette-illustrating-shifts-in-scope-of-activity)
-    -   [Commentary on Vignette - including a brief description of the
-        nested levels of activity & tools
-        used](#commentary-on-vignette---including-a-brief-description-of-the-nested-levels-of-activity-tools-used)
+    -   [Commentary on Vignette](#commentary-on-vignette)
+-   [Summary of design evolution](#summary-of-design-evolution)
+-   [Commentary on evolution of design by
+    Phase](#commentary-on-evolution-of-design-by-phase)
+    -   [Phase one and two](#phase-one-and-two)
+    -   [Phase Three & Four](#phase-three-four)
+    -   [Phase Five](#phase-five)
+    -   [Description of the nested levels of activity & tools
+        used](#description-of-the-nested-levels-of-activity-tools-used)
         -   [Diverse Environmental
             Objectives](#diverse-environmental-objectives)
         -   [Wider Objective - Making games for an
@@ -27,17 +32,11 @@ title: 4. Emerging Learning Designs
         ANALYSIS](#commentary-the-use-of-at-scopes-in-data-analysis)
         -   [Levels of Abstraction om this design (perhaps
             drop?)](#levels-of-abstraction-om-this-design-perhaps-drop)
--   [Summary of design evolution](#summary-of-design-evolution)
--   [Commentary on evolution of design by
-    Phase](#commentary-on-evolution-of-design-by-phase)
-    -   [Phase one and two](#phase-one-and-two)
-    -   [Phase Three & Four](#phase-three-four)
-    -   [Phase Five](#phase-five)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Facilitator Design Tensions](#facilitator-design-tensions)
-        -   [Tensions surrounding authenticity of coding
-            environment](#tensions-surrounding-authenticity-of-coding-environment)
+        -   [Tensions surrounding authenticity of coding environment /
+            template](#tensions-surrounding-authenticity-of-coding-environment-template)
     -   [Participant conflicts /
         contractions](#participant-conflicts-contractions)
         -   [1. Identity hardcore coding & disfunctional group work -
@@ -45,15 +44,18 @@ title: 4. Emerging Learning Designs
         -   [2. Participant experience of Contradiction - Conflict - not
             enough support
             available](#participant-experience-of-contradiction---conflict---not-enough-support-available)
--   [Addressing the Play Paradox](#addressing-the-play-paradox)
 -   [Exploring affordances of Key responses to emerging
     tensions](#exploring-affordances-of-key-responses-to-emerging-tensions)
     -   [Code playgrounds, and web
         technology](#code-playgrounds-and-web-technology)
     -   [Structuring supporting
         resources](#structuring-supporting-resources)
-    -   [Learning Dimensions Map](#learning-dimensions-map)
+    -   [3. Facilitator conflict addressing the Play
+        Paradox](#facilitator-conflict-addressing-the-play-paradox)
+        -   [Learning Dimensions Map](#learning-dimensions-map)
     -   [Limits to this map - MOVE?](#limits-to-this-map---move)
+        -   [Using Physical Maps of Missions as Game Design
+            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
     -   [Including Coding Concepts in the Learning Map and including
         Code Cards with links to online
         Concepts](#including-coding-concepts-in-the-learning-map-and-including-code-cards-with-links-to-online-concepts)
@@ -68,8 +70,11 @@ title: 4. Emerging Learning Designs
             Problems](#authenticity-of-audience-and-problems)
         -   [Authenticity of supporting documentation and design
             concepts](#authenticity-of-supporting-documentation-and-design-concepts)
-    -   [Discussion on tensions in relation to Lit Review and
-        REQUESTS](#discussion-on-tensions-in-relation-to-lit-review-and-requests)
+-   [Further Discussion](#further-discussion)
+    -   [Starting discussion on the mutual nature of the design
+        process.](#starting-discussion-on-the-mutual-nature-of-the-design-process.)
+    -   [Work of Gee and others on identity of makers /
+        coders](#work-of-gee-and-others-on-identity-of-makers-coders)
 -   [Link to next chapter](#link-to-next-chapter)
 
 ## Research Questions - June 2023
@@ -83,55 +88,42 @@ title: 4. Emerging Learning Designs
 
 This chapter addresses the barriers to game coding and design through interviews with fellow practitioners in this domain and via exploration of tensions emerging. It is also important to introduce later findings in the following two chapters.
 
-**Recap of context and specifics of designing for informal learning**
-
-- my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
-- design based experiments - some factors - transistion from previous chapter
-
-
 **Key questions / motivations in creating a new learning community**
 
 The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice.
 
 One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
-**Practical factors**
-
-It is important to address contextual factors that facilitated and shaped development of some initial creative practices. Including:
-
-- Impact of research practicalities
-- The location at the university
-- Eliza effect of being part of a research project
-
-<!-- Eliza effect? If so how relevant? -->
-
-Availability of resources potentially novel. For example, the ability to have that number of identical computers for this audience in particular, and using this shape of working which was determined by technical reasons but which had an impact nevertheless on the ability for students to move around the room and the absence of a front for the teacher to teach from. After attempts in previous sessions I abandoned attempts to use the screen in the space to do explicit teaching. The process was very disruptive to the emerging group behaviours and practices.
-
-
-**Outline of chapter**
-
-This chapter;
-
-- exposes tensions in this domain from interviews with peer practitioners.
--  charts the evolution of the learning design
-- It draws on immediate analysis of participants reactions and contributions from journal notes,
-- participant interviews and analysis of changes in the learning resources created.
-
-**Formative Interventions / DBR**
-
-The design of the research experiment and learning I started from a very open position and has evolved from several iterations of collaborative work with participants.
-
-One experimental team consisted of Home Educating families another involved local primary schools with Year 6 (10-11 year old) classes. Learners acted as researcher participants to guide the next iteration of the game making program both directly and indirectly. Direct input was through requests and informal feedback and structured end-of-course interviews. Indirect input came from research data in the form on the games participants created, my research journal entries on my interactions with and observations of participants and recorded audio and video data of the participants and their computer screen capture.
 
 **Methodology for exposing tensions**
 
 <!-- NOTE - Recap last chapter - move most /any context there.  -->
 
-Exposing tensions in activity systems is key to the process of design.
+Exposing tensions and participant conflict in activity systems to activity theory and also served to drive the evolution of this learning design.
 
 The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. TADS thus addresses transformative agency.
 
 In addition, work to distinguish type of learner agency including transformative, authorial and instrumental agency are potentially useful tools.
+
+**Outline of chapter**
+
+Thus, this chapter;
+
+- exposes tensions in this domain from interviews with peer practitioners and literature review
+-  charts the evolution of the learning design
+- It draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created.
+
+
+## Exploring issues and context from practitioner interviews and existing research
+
+
+**Recap of context and specifics of designing for informal learning**
+
+- my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
+- design based experiments - some factors - transistion from previous chapter
+
+
+**Issues arising from practitioner interviews**
 
 
 <!-- The design description is framed within DBR language and concepts. -->
@@ -196,11 +188,14 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
+### Context of  Vignette
+
+
 The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
 
 https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/edit
-
 ### Commentary on Vignette
+
 
 This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design.
 It will signpost to where tensions in the activity system are explored in this chapter.  
