--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -120,7 +120,7 @@ Thus, this chapter;
 **Recap of context and specifics of designing for informal learning**
 
 - my interest in informal learning - recap rogoff and similar - and - issues of designing for informal settings
-- design based experiments - some factors - transistion from previous chapter
+- design based experiments - some factors - transition from previous chapter
 
 
 **Issues arising from practitioner interviews**
